main.tf
provider "aws" { region = "us-east-1" }

# 1. Shared Database
variable "db_password" {
  type      = string
  sensitive = true
}

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_subnet" "a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
}

resource "aws_db_instance" "lms_db" {
  allocated_storage = 20
  engine            = "postgres"
  instance_class    = "db.t3.micro"
  db_name           = "lms"
  username          = "postgres"
  password          = var.db_password
  skip_final_snapshot = true
}

# 2. Routing (Load Balancer)
resource "aws_lb" "lms_alb" {
  name = "lms-alb"
  load_balancer_type = "application"
  subnets = [aws_subnet.a.id, aws_subnet.b.id]
}

resource "aws_lb_target_group" "blue" {
  name     = "tg-blue"
  port     = 8000
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}

resource "aws_lb_target_group" "green" {
  name     = "tg-green"
  port     = 8000
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.lms_alb.arn
  port = "80"
  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.blue.arn # Default to Blue
  }
}
